<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.fragment.news.bottomsheet.NewsBottomSheet">

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/country"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollViewCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/countryChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:checkedChip="@+id/idChip"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/idChip"
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/usChip"
                    android:text="@string/us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/sgChip"
                    android:text="@string/sg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/auChip"
                    android:text="@string/au"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/brChip"
                    android:text="@string/br"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/ruChip"
                    android:text="@string/ru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/cnChip"
                    android:text="@string/cn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/jpChip"
                    android:text="@string/jp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/category"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewCountry" />

    <HorizontalScrollView
        android:id="@+id/scrollViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoryChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/generalChip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/generalChip"
                    android:text="@string/general"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/businessChip"
                    android:text="@string/business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/entertainmentChip"
                    android:text="@string/entertainment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/scienceChip"
                    android:text="@string/science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/sportsChip"
                    android:text="@string/sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/technologyChip"
                    android:text="@string/technology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewCategory" />


</androidx.constraintlayout.widget.ConstraintLayout>